// Copyright (c) 2023 - Restate Software, Inc., Restate GmbH
//
// This file is part of the Restate e2e tests,
// which are released under the MIT license.
//
// You can find a copy of the license in file LICENSE in the root
// directory of this repository or package, or at
// https://github.com/restatedev/e2e/blob/main/LICENSE

syntax = "proto3";

option java_package = "dev.restate.e2e.services.collections.list";
option java_outer_classname = "ListProto";

import "google/protobuf/empty.proto";
import "dev/restate/ext.proto";

package list;

service ListService {
  option (dev.restate.ext.service_type) = KEYED;

  rpc Append(AppendRequest) returns (google.protobuf.Empty);
  rpc Clear(Request) returns (List);
  rpc Get(Request) returns (List);
}

message AppendRequest {
  string list_name = 1 [(dev.restate.ext.field) = KEY];
  string value = 2;
}

message Request {
  string list_name = 1 [(dev.restate.ext.field) = KEY];
}

message List {
  repeated string values = 2;
}